[gd_scene load_steps=49 format=3 uid="uid://ciyscr1kgpgnf"]

[ext_resource type="Script" path="res://scripts/player/cam_setup.gd" id="1_fp4cd"]
[ext_resource type="Shader" path="res://shaders/screen/ntsc.gdshader" id="2_55hn4"]
[ext_resource type="Material" uid="uid://dr52yj2jvqaa7" path="res://post_process/dither-banding_mat.tres" id="2_ise61"]
[ext_resource type="FontFile" uid="uid://cernpx6usgjfx" path="res://graphics/sprites/ui/PetscopWide.ttf" id="5_5sf62"]
[ext_resource type="Texture2D" uid="uid://d2843jufbjijg" path="res://graphics/sprites/ui/pieces_counter.png" id="6_5mjnf"]
[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="6_rn2rq"]
[ext_resource type="AudioStream" uid="uid://cgf2tw178mkqu" path="res://sfx/pause/pause1.wav" id="7_15j72"]
[ext_resource type="AudioStream" uid="uid://02ad31s7y0pf" path="res://sfx/textbox/textboxclose.wav" id="7_cbawt"]
[ext_resource type="Texture2D" uid="uid://bjixsntdh6tqe" path="res://graphics/sprites/ui/hud_piece.png" id="7_mrxng"]
[ext_resource type="Texture2D" uid="uid://el87s6xvs4rr" path="res://graphics/sprites/ui/pausemenu_bg1.png" id="8_7jqwc"]
[ext_resource type="AudioStream" uid="uid://biokc4gwjau70" path="res://sfx/pause/pause2.wav" id="8_olemx"]
[ext_resource type="AudioStream" uid="uid://bfpo2tcld8o3t" path="res://sfx/pause/pause3.wav" id="9_67xll"]
[ext_resource type="Texture2D" uid="uid://r7ggvn12fjys" path="res://graphics/sprites/ui/pausemenu_buttons.png" id="9_yo6lc"]
[ext_resource type="AudioStream" uid="uid://clt2bm20cpgtp" path="res://sfx/pause/select1.wav" id="10_jtm0y"]
[ext_resource type="AudioStream" uid="uid://b16qbsmkn67wh" path="res://sfx/pause/select2.wav" id="11_8ia7v"]
[ext_resource type="AudioStream" uid="uid://bcjxtfy57n1mq" path="res://sfx/pause/selected.wav" id="14_and1a"]
[ext_resource type="Texture2D" uid="uid://cgug7tu2or80t" path="res://graphics/sprites/ui/pausemenu_overlay.png" id="14_cvfsw"]
[ext_resource type="FontFile" uid="uid://gsd5w8kh7xxx" path="res://graphics/sprites/ui/pausemenu_numbers.fnt" id="16_gfid7"]
[ext_resource type="Texture2D" uid="uid://bnfrcvqe5fdrl" path="res://graphics/sprites/ui/ui_buttons.png" id="17_32bl0"]
[ext_resource type="Script" path="res://scripts/objects/loading.gd" id="19_8h6l3"]
[ext_resource type="Shader" path="res://shaders/screen/transparent.gdshader" id="21_c3mch"]
[ext_resource type="Script" path="res://scripts/ui/nifty.gd" id="21_jym5i"]
[ext_resource type="Texture2D" uid="uid://bcufsjjwgakij" path="res://graphics/sprites/ui/school.png" id="21_lx5qg"]
[ext_resource type="Texture2D" uid="uid://bjbo7regcuusm" path="res://graphics/sprites/ui/nifty_pencil.png" id="22_1wl73"]
[ext_resource type="Texture2D" uid="uid://ed76e6dscv1j" path="res://graphics/sprites/ui/nifty_background.png" id="22_ep7cm"]
[ext_resource type="Texture2D" uid="uid://xj3h3m7xe531" path="res://graphics/sprites/player/guardian.png" id="22_rype5"]
[ext_resource type="AudioStream" uid="uid://b5yjt4nju1572" path="res://sfx/nifty.wav" id="24_eywim"]
[ext_resource type="Texture2D" uid="uid://btfs4ptkrfxgo" path="res://graphics/sprites/ui/pet_ref.png" id="25_acm8a"]
[ext_resource type="AudioStream" uid="uid://df3cskqopxqdo" path="res://sfx/draw.wav" id="25_yeaa7"]
[ext_resource type="Texture2D" uid="uid://bijygukfidioo" path="res://graphics/sprites/ui/DEMO.png" id="29_v5uj1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jhksb"]
shader = ExtResource("2_55hn4")
shader_parameter/effect = null
shader_parameter/ntsc_enable = null

[sub_resource type="GDScript" id="GDScript_en8ci"]
script/source = "extends Node2D
var piece_frame = 0
var tween_called = false
@export var called = false
const HUD_SPEED = 0.5
var loaded = false

func _ready():
	$counter_text.text = str(Global.pieces_amount[Global.current_character]).pad_zeros(5)
	loaded = true
func _process(delta):
	piece_frame+=10.0*delta
	if piece_frame>19:
		piece_frame=0
	$piece.frame_coords.x = round(piece_frame)
	
	if $counter_text.text!=str(Global.pieces_amount[Global.current_character]).pad_zeros(5) && loaded:
		if !tween_called:
			create_tween().tween_property(self,\"position:y\",29.,HUD_SPEED).set_trans(Tween.TRANS_LINEAR)
			tween_called=true
		$counter_timer.start()
		$counter_text.text = str(Global.pieces_amount[Global.current_character]).pad_zeros(5)

func _on_counter_timer_timeout():
	create_tween().tween_property(self,\"position:y\",-18.,HUD_SPEED).set_trans(Tween.TRANS_LINEAR)
	called = false
	tween_called=false
"

[sub_resource type="LabelSettings" id="LabelSettings_4cmbp"]
line_spacing = 16.0
font = ExtResource("5_5sf62")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_npv3p"]
font = ExtResource("16_gfid7")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_rtn8s"]
font = ExtResource("5_5sf62")
font_color = Color(0.572549, 0.168627, 0.403922, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkqw7"]
atlas = ExtResource("17_32bl0")
region = Rect2(0, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_djfwa"]
atlas = ExtResource("17_32bl0")
region = Rect2(136, 34, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvemv"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_wkqw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djfwa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_k4t3l"]
atlas = ExtResource("17_32bl0")
region = Rect2(0, 102, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq7ov"]
atlas = ExtResource("17_32bl0")
region = Rect2(136, 102, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_ij7ib"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_k4t3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq7ov")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_08i3i"]
colors = PackedColorArray(0.772549, 0.137255, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_264x2"]
gradient = SubResource("Gradient_08i3i")
width = 32

[sub_resource type="GDScript" id="GDScript_2wviw"]
script/source = "extends Node2D

const ANIMATION_SPEED = 8

var current_frame = 0

var loaded = false
	
func _process(_delta):
	
	if Global.control_mode==4 || Global.control_mode==5:
		self.visible=true
	else:
		self.visible=false
		
	if get_tree().get_first_node_in_group(\"Player\"):
		if Global.control_mode==4:
			if !loaded:
				$player.texture = get_tree().get_first_node_in_group(\"Player\").get_child(1).texture
				$player.get_material().set_shader_parameter(\"albedoTex\", $player.texture)
				$player.hframes = get_tree().get_first_node_in_group(\"Player\").get_child(1).hframes
				$player.vframes = get_tree().get_first_node_in_group(\"Player\").get_child(1).vframes
				if get_tree().get_first_node_in_group(\"Player\").get_child(1).frame_coords.x!=1 && get_tree().get_first_node_in_group(\"Player\").get_child(1).frame_coords.x!=2:
					$player.frame_coords.x=get_tree().get_first_node_in_group(\"Player\").get_child(1).frame_coords.x
				loaded = true
		else:
			loaded=false
		if get_tree().get_first_node_in_group(\"Player\").v==1:
			$player.frame_coords.x=0
		
		if get_tree().get_first_node_in_group(\"Player\").v==-1:
			$player.frame_coords.x=3
			
		$player.frame_coords.y=get_tree().get_first_node_in_group(\"Player\").get_child(1).frame_coords.y
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mffeo"]
shader = ExtResource("21_c3mch")
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/transparent_color = Color(1, 0, 1, 1)
shader_parameter/albedoTex = ExtResource("22_rype5")

[sub_resource type="GDScript" id="GDScript_u1kql"]
script/source = "extends Sprite2D
var timer = 0.0
func _process(delta):
	timer += delta
	if Global.demo:
		visible=int(timer)%2==0
		
"

[sub_resource type="LabelSettings" id="LabelSettings_kb8ta"]
line_spacing = 0.0
font = ExtResource("5_5sf62")

[sub_resource type="GDScript" id="GDScript_sm4od"]
script/source = "extends Label

func _ready():
	if Global.recording_header:
		text=\"Name: \"+Global.recording_name+\"\\nGen: \"+str(Global.gen)
	else:
		visible=false

func disappear():
	visible=false
	$invisible.start()

func _process(_delta):
	var viewport_feed: Viewport =  get_tree().root.get_viewport().get_viewport()
	var screen_texture: Texture2D = viewport_feed.get_texture()
	var screen_image: Image = screen_texture.get_image()
	if screen_image.get_pixel(20,17).get_luminance()>0.5:
		self.label_settings.set_font_color(Color(0.0,0.0,0.0,1.0))
	else:
		self.label_settings.set_font_color(Color(1.0,1.0,1.0,1.0))
"

[node name="PSXLayer" type="CanvasLayer"]
script = ExtResource("1_fp4cd")

[node name="NTSC" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_jhksb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="NTSC_viewport" type="SubViewport" parent="NTSC"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="Dither" type="SubViewportContainer" parent="NTSC/NTSC_viewport"]
material = ExtResource("2_ise61")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="dither_view" type="SubViewport" parent="NTSC/NTSC_viewport/Dither"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="no_filter_view" type="SubViewportContainer" parent="NTSC/NTSC_viewport/Dither/dither_view"]
offset_right = 40.0
offset_bottom = 40.0

[node name="no_filter_view" type="SubViewport" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view" groups=["screen_feed"]]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="HUD" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view"]

[node name="textboxes" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD" groups=["HUD_textboxes"]]

[node name="dialogue_close" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/textboxes"]
process_mode = 3
stream = ExtResource("7_cbawt")
volume_db = 5.0

[node name="piece_counter" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD"]
position = Vector2(0, -18)
script = SubResource("GDScript_en8ci")

[node name="counter_text" type="Label" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/piece_counter"]
z_index = -2
offset_left = 54.0
offset_top = 1.0
offset_right = 109.0
offset_bottom = 33.0
text = "00000"
label_settings = SubResource("LabelSettings_4cmbp")

[node name="counter_timer" type="Timer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/piece_counter"]
wait_time = 3.0
one_shot = true

[node name="counter_bg" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/piece_counter"]
z_index = -3
position = Vector2(52, 0)
texture = ExtResource("6_5mjnf")
centered = false

[node name="piece" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/piece_counter"]
z_index = -2
position = Vector2(42, 7)
texture = ExtResource("7_mrxng")
hframes = 20

[node name="caught" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD" groups=["HUD_caught"]]
z_index = -1

[node name="pause_menu" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD" groups=["HUD_pausemenu"]]
process_mode = 3
script = ExtResource("6_rn2rq")

[node name="screen_sprite" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
z_index = 1
texture_filter = 1
centered = false

[node name="current_menu" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
z_index = 1

[node name="pause_sound" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
process_mode = 3
stream = ExtResource("7_15j72")
volume_db = 10.0
bus = &"HUD_SFX"

[node name="pause_sound2" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
process_mode = 3
stream = ExtResource("8_olemx")
volume_db = 10.0
bus = &"HUD_SFX"

[node name="pause_sound3" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
process_mode = 3
stream = ExtResource("9_67xll")
volume_db = 10.0
bus = &"HUD_SFX"

[node name="select_up" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
stream = ExtResource("10_jtm0y")
volume_db = 10.0
bus = &"HUD_SFX"

[node name="select_down" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
stream = ExtResource("11_8ia7v")
volume_db = 10.0
bus = &"HUD_SFX"

[node name="selected" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
stream = ExtResource("14_and1a")
volume_db = 10.0
bus = &"HUD_SFX"

[node name="main_pausemenu" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]

[node name="background1" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu"]
z_index = -1
texture = ExtResource("8_7jqwc")
centered = false

[node name="visible_group" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu"]

[node name="piece" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/visible_group"]
z_index = -1
position = Vector2(175, 20)
texture = ExtResource("7_mrxng")
centered = false
hframes = 20

[node name="piece_counter" type="Label" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/visible_group"]
offset_left = 199.0
offset_top = 20.0
offset_right = 299.0
offset_bottom = 50.0
text = "00000"
label_settings = SubResource("LabelSettings_npv3p")

[node name="level_slogan" type="Label" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/visible_group" groups=["level_slogan"]]
offset_left = 180.0
offset_top = 56.0
offset_right = 320.0
offset_bottom = 296.0
label_settings = SubResource("LabelSettings_rtn8s")
autowrap_mode = 2

[node name="Select" type="AnimatedSprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/visible_group"]
position = Vector2(232, 203)
sprite_frames = SubResource("SpriteFrames_kvemv")

[node name="Label" type="Label" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/visible_group/Select"]
offset_left = 11.0
offset_top = -1.0
offset_right = 112.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5sf62")
text = "Select
"

[node name="Resume" type="AnimatedSprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/visible_group"]
position = Vector2(235, 171)
sprite_frames = SubResource("SpriteFrames_ij7ib")
frame = 1

[node name="Label" type="Label" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/visible_group/Resume"]
offset_left = 8.0
offset_top = 1.0
offset_right = 109.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5sf62")
text = "Resume"

[node name="buttons" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu"]

[node name="resume_button" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/buttons"]
position = Vector2(28, 137)
texture = ExtResource("9_yo6lc")
centered = false
hframes = 2
vframes = 5
frame = 1

[node name="options_button" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/buttons"]
position = Vector2(18, 154)
texture = ExtResource("9_yo6lc")
centered = false
hframes = 2
vframes = 5
frame = 2

[node name="pets_button" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/buttons"]
position = Vector2(18, 171)
texture = ExtResource("9_yo6lc")
centered = false
hframes = 2
vframes = 5
frame = 4

[node name="baby_button" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/buttons"]
position = Vector2(18, 188)
texture = ExtResource("9_yo6lc")
centered = false
hframes = 2
vframes = 5
frame = 6

[node name="quit_button" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu/buttons"]
position = Vector2(18, 205)
texture = ExtResource("9_yo6lc")
centered = false
hframes = 2
vframes = 5
frame = 8

[node name="buttons_quit" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu/main_pausemenu"]

[node name="overlay" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("14_cvfsw")
centered = false
hframes = 5

[node name="pink_fade" type="ColorRect" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/pause_menu"]
offset_right = 320.0
offset_bottom = 240.0
color = Color(0.996078, 0.847059, 0.996078, 0)

[node name="nifty" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view" groups=["Nifty"]]
process_mode = 3
visible = false
script = ExtResource("21_jym5i")

[node name="border" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty"]
z_index = 1

[node name="wall_1" type="TextureRect" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty/border"]
offset_right = 32.0
offset_bottom = 240.0
texture = SubResource("GradientTexture1D_264x2")

[node name="wall_2" type="TextureRect" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty/border"]
offset_left = 288.0
offset_right = 320.0
offset_bottom = 240.0
texture = SubResource("GradientTexture1D_264x2")
flip_h = true

[node name="bg" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty/border"]
position = Vector2(32, 0)
texture = ExtResource("22_ep7cm")
centered = false

[node name="Texture" type="TextureRect" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty"]
z_index = 1
offset_left = 32.0
offset_right = 72.0
offset_bottom = 40.0

[node name="pencil" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty"]
z_index = 2
position = Vector2(32, 230)

[node name="sprite" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty/pencil"]
texture = ExtResource("22_1wl73")
centered = false

[node name="nifty" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty"]
stream = ExtResource("24_eywim")
volume_db = 5.0

[node name="draw" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/nifty"]
stream = ExtResource("25_yeaa7")
volume_db = 5.0

[node name="keyboard" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view" groups=["HUD_keyboard"]]

[node name="school" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view"]
z_index = -4
script = SubResource("GDScript_2wviw")

[node name="player" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/school"]
material = SubResource("ShaderMaterial_mffeo")
texture = ExtResource("22_rype5")
offset = Vector2(159, 181)
hframes = 5
vframes = 5
frame = 3

[node name="overlay" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/school"]
texture = ExtResource("21_lx5qg")
centered = false

[node name="loading" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view" groups=["loading_overlay"]]
process_mode = 3
script = ExtResource("19_8h6l3")

[node name="fade_in" type="ColorRect" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/loading"]
visible = false
z_index = 10
offset_right = 320.0
offset_bottom = 240.0

[node name="loading_screen" type="TextureRect" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/loading"]
z_index = 11
offset_right = 40.0
offset_bottom = 40.0

[node name="loading_timer" type="Timer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/loading"]

[node name="DEMO" type="Sprite2D" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view"]
visible = false
z_index = 2
z_as_relative = false
position = Vector2(160, 37)
texture = ExtResource("29_v5uj1")
script = SubResource("GDScript_u1kql")

[node name="recording_header" type="Label" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view"]
z_index = 12
z_as_relative = false
offset_left = 20.0
offset_top = 17.0
offset_right = 340.0
offset_bottom = 55.0
text = "Name:"
label_settings = SubResource("LabelSettings_kb8ta")
script = SubResource("GDScript_sm4od")

[node name="invisible" type="Timer" parent="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/recording_header"]
process_mode = 3
wait_time = 0.1

[node name="player_camera" type="Camera3D" parent="NTSC/NTSC_viewport/Dither/dither_view"]
transform = Transform3D(1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 2.629, 8)
current = true
fov = 35.0

[node name="ReferenceImage" type="Sprite2D" parent="."]
visible = false
position = Vector2(160, 120)
texture = ExtResource("25_acm8a")

[connection signal="timeout" from="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/piece_counter/counter_timer" to="NTSC/NTSC_viewport/Dither/dither_view/no_filter_view/no_filter_view/HUD/piece_counter" method="_on_counter_timer_timeout"]
